# loop-harness-agent

./: .gitignore  Agent Loop Engineering 深度解读报告.md  CHANGELOG.md  CLAUDE.md  CROSS_PROJECT_GUIDE.md  DELIVERY.md  EXAMPLES.md  INSTALL.md  Loop Agent 项目教学.docx  PRD→生产 全链路自动化开发标准化流程 v1.0.md  README-NPM.md  README.md  Skill-vs-MCP对比报告.md  TROUBLESHOOTING.md  Trae Solo 工程实现指南：PRD→生产全链路自动化系统.md  export_promo_summary.py  fix_quotes.py  fix_quotes2.py  fix_quotes3.py  fix_quotes4.py  fix_quotes5.py  generate_promo_images.py  generate_remaining.py  generate_teaching_docx.py  init-loop-agent.bat  mcp.json  package-final.ps1  package-lock.json  package-loop-agent.bat  package-now.ps1  package-v3.ps1  package.json  trae.toml  tsconfig.json  vitest.config.ts  封装建议.md  封装建议（核心）.md  融合计划书.md  要求.md  项目进度记录.md
loop-agent-mcp/: ACCEPTANCE_REPORT_V1.3.md  CHANGELOG.md  README.md  clear_and_test.py  comprehensive_test_suite.py  debug_architect.py  debug_architect2.py  package-lock.json  package.json  pyproject.toml  quick_fix_test.py  run_tests.py  smoke_test.py  test_executor.py  test_stdio.py  tsconfig.json
loop-agent-mcp/docs/: CODE_REVIEW_PARALLEL.md  IMPLEMENTATION_NOTES_PARALLEL.md  IMPLEMENTATION_NOTES_PARALLEL_v2.md  MCP项目演进教学文档_v1.3.md  TEST_REPORT_PARALLEL.md
loop-agent-mcp/loop_agent_mcp/: __init__.py  server.py
loop-agent-mcp/loop_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
loop-agent-mcp/loop_agent_mcp/core/: __init__.py  (+6 more)
loop-agent-mcp/src/: index.ts
loop-agent-mcp/tests/: test_engines.py  test_parallel_scheduler.py
(+259 files in other folders)
