[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-agent-mcp"
version = "1.2.0"
description = "Loop-Harness-Agent MCP Server：融合 Boss-auto-harness 的 16 角色 / 10 Phase / 4 Gate 全自动闭环执行引擎"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Loop-Harness-Agent Team"},
]
keywords = ["mcp", "agent", "loop", "harness", "orchestrator", "blackboard"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]
all = ["loop-agent-mcp[dev]"]

[project.scripts]
loop-agent-mcp = "loop_agent_mcp.server:main"

[project.urls]
"Source" = "https://example.com/loop-harness-agent"
"Workspace" = "https://example.com/loop-harness-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["loop_agent_mcp*"]

[tool.setuptools.package-data]
loop_agent_mcp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
